--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -36,18 +36,17 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          chmod 600 /tmp/ssh_key
           echo "$SSH_PRIVATE_KEY" > /tmp/ssh_key
+          chmod 600 /tmp/ssh_key
           until ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "echo 'SSH is now available'"
           do
-            echo "Waiting for SSH..."
-            sleep 10
+              echo "Waiting for SSH..."
+              sleep 10
           done
 
       - name: Run Script on Droplet
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/ssh_key
-          chmod 600 /tmp/ssh_key
-          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "/root/scripts/join.sh"
+          scp -o StrictHostKeyChecking=no -i /tmp/ssh_key /root/scripts/join.sh root@${{ env.DROPLET_IP }}:/root/scripts/join.sh
+          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/scripts/join.sh"
