--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -1,7 +1,15 @@
 name: Create DigitalOcean Droplet and Run Script
 
 on:
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch:
+    inputs:
+      profile_type:
+        description: "Profile Type"
+        required: true
+        default: "head"
+        type: choice
+        options:
+          - head
 
 jobs:
   create-and-setup-droplet:
@@ -50,4 +58,4 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           scp -o StrictHostKeyChecking=no -i /tmp/ssh_key scripts/join_and_profile.sh root@${{ env.DROPLET_IP }}:/root/join_and_profile.sh
-          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh"
+          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }}"
