--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -54,8 +54,14 @@ jobs:
           done
 
       - name: Copy and Run Script on Droplet
+        id: script
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           scp -o StrictHostKeyChecking=no -i /tmp/ssh_key scripts/join_and_profile.sh root@${{ env.DROPLET_IP }}:/root/join_and_profile.sh
           ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }}"
+
+      - name: Return pprof download links
+        run: |
+          echo "CPU profile link: ${{ steps.script.outputs.cpu_prof_link }}"
+          echo "Heap profile link: ${{ steps.script.outputs.heap_prof_link }}"
