--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -10,6 +10,9 @@ on:
         type: choice
         options:
           - head
+      binary_version:
+        description: "Binary Version (if empty, will use RPC version)"
+        required: false
 
 jobs:
   create-and-setup-droplet:
@@ -59,9 +62,15 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           scp -o StrictHostKeyChecking=no -i /tmp/ssh_key scripts/join_and_profile.sh root@${{ env.DROPLET_IP }}:/root/join_and_profile.sh
-          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }}"
+          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }} --binary-version ${{ github.event.inputs.binary_version }}"
 
       - name: Return pprof download links
         run: |
           echo "CPU profile link: ${{ steps.script.outputs.cpu_prof_link }}"
           echo "Heap profile link: ${{ steps.script.outputs.heap_prof_link }}"
+
+      - name: Delete Droplet
+        env:
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        run: |
+          doctl compute droplet delete ${{ env.DROPLET_ID }} --force
