--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -62,7 +62,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           scp -o StrictHostKeyChecking=no -i /tmp/ssh_key scripts/join_and_profile.sh root@${{ env.DROPLET_IP }}:/root/join_and_profile.sh
-          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }} --binary-version ${{ github.event.inputs.binary_version }}"
+          ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key root@${{ env.DROPLET_IP }} "bash /root/join_and_profile.sh --profile-type ${{ github.event.inputs.profile_type }} --binary-version '${{ github.event.inputs.binary_version }}'"
 
       - name: Return pprof download links
         run: |
@@ -70,6 +70,7 @@ jobs:
           echo "Heap profile link: ${{ steps.script.outputs.heap_prof_link }}"
 
       - name: Delete Droplet
+        if: always()
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
         run: |
