more profile types

--- a/.github/workflows/pprof.yml
+++ b/.github/workflows/pprof.yml
@@ -73,10 +73,13 @@ jobs:
 
       - name: Return pprof download links
         run: |
-          echo "CPU profile link: ${{ steps.script.outputs.cpu_prof_link }}"
+          echo "Goroutine profile link: ${{ steps.script.outputs.goroutine_prof_link }}"
           echo "Heap profile link: ${{ steps.script.outputs.heap_prof_link }}"
+          echo "Threadcreate profile link: ${{ steps.script.outputs.threadcreate_prof_link }}"
           echo "Block profile link: ${{ steps.script.outputs.block_prof_link }}"
           echo "Mutex profile link: ${{ steps.script.outputs.mutex_prof_link }}"
+          echo "CPU profile link: ${{ steps.script.outputs.cpu_prof_link }}"
+          echo "Trace profile link: ${{ steps.script.outputs.trace_prof_link }}"
 
       - name: Delete Droplet
         if: always()
